# robot_arm_110

./: LICENSE  Readme  Readme_01_URDF  Readme_02_Moveit2_setup  Readme_03  so_arm_101.urdf  urdf_1.rviz
src/so101_hardware/: CMakeLists.txt  package.xml  so101_hardware.xml
src/so101_hardware/include/so101_hardware/: so101_interface.hpp
src/so101_hardware/src/: so101_interface.cpp
src/so_arm101_description/: CMakeLists.txt  package.xml
src/so_arm101_description/urdf/: my_arm_config.rviz  simplify_urdf.py  so_arm_101_simplified.urdf  so_arm_101_simplified_best.urdf  so_arm_101_simplified_best_without_stl.urdf
src/so_arm101_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/so_arm101_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  so100.ros2_control.xacro  so100.srdf  so100.urdf.xacro
src/so_arm101_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
